--- a/src/app/demo-gtmt.html
+++ b/src/app/demo-gtmt.html
@@ -214,6 +214,6 @@
 <!-- Footer -->
 <mat-toolbar class="gtmt-footer">
   <div class="blx-navbar-logo">
-    <img alt="Eloqua Logo" style="width: 100px;" src="assets/eloqua.png" />
+    <img alt="Eloqua Logo" style="width: 100px;" src="https://cdn.jsdelivr.net/gh/atajmouti/demo-gtmt@master/src/assets/eloqua.png" />
   </div>
 </mat-toolbar>
