--- a/src/app/demo-gtmt.scss
+++ b/src/app/demo-gtmt.scss
@@ -7,8 +7,9 @@
 }
 
 h1 {
-
-    font-family: "Lato Black"
+    font-family: "Lato Black";
+    font-size: 24px;
+    font-weight: 900;
 }
 
 .gtmt-header {
