--- a/src/app/demo-gtmt.html
+++ b/src/app/demo-gtmt.html
@@ -4,7 +4,7 @@
 	<mat-grid-list cols="6" rowHeight="80px">
 		<mat-grid-tile colspan="1" rowspan="1">
 			<!-- <mat-icon class="gtmt-logo" svgIcon="logolp_part"></mat-icon> -->
-			<img class="gtmt-logo" alt="Eloqua Logo" style="width: 160px;" src="https://cdn.jsdelivr.net/gh/atajmouti/demo-gtmt@master/src/assets/gtmt-logo.png" />
+			<img alt="GTMT Logo" style="width: 160px; height: 80px" src="https://cdn.jsdelivr.net/gh/atajmouti/demo-gtmt@master/src/assets/gtmt-logo-transparent.png" />
 
 		</mat-grid-tile>
 
