--- a/src/app/demo-gtmt.html
+++ b/src/app/demo-gtmt.html
@@ -9,7 +9,7 @@
 
 			<mat-grid-tile colspan="4" rowspan="1">
 				<h1>
-					Conception de la campagne 
+					Conception de la campagne courrier
 				</h1>
 			</mat-grid-tile>
 
@@ -34,17 +34,20 @@
 					<ng-template matStepLabel>
 						Création de la campagne
 					</ng-template>
-					<mat-grid-list cols="5" rowHeight="60px">
+					<mat-grid-list cols="9" rowHeight="0px">
 						<!-- Nom de la campgane courrier -->
-						<mat-grid-tile colspan="1" rowspan="2">
+						<mat-grid-tile colspan="5" rowspan="2">
 							<mat-form-field appearance="outline">
 								<mat-label>Nom de la campgane courrier</mat-label>
 								<input matInput placeholder="Nom de la campgane courrier" formControlName="name" required>
               </mat-form-field>
 						</mat-grid-tile>
 
+						<mat-grid-tile colspan="4" rowspan="1">
+						</mat-grid-tile>
+
 						<!-- Campagne Template -->
-						<mat-grid-tile colspan="2" rowspan="2">
+						<mat-grid-tile colspan="5" rowspan="2">
 							<mat-form-field appearance="outline">
 								<mat-label>Utiliser une campagne existante pour initier les paramètres
 
@@ -52,7 +55,7 @@
 								<input type="text"
                   placeholder="Utiliser une campagne existante pour initier les paramètres"
                   matInput
-                  [formControl]="template"
+                  [(ngModel)]="template"
                   [matAutocomplete]="auto">
 								<mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
 									<mat-option *ngFor="let campagne of filteredOptions  | async" [value]="campagne">
@@ -63,16 +66,19 @@
 
 						</mat-grid-tile>
 
-						<mat-grid-tile colspan="2" rowspan="1">
+						<mat-grid-tile colspan="4" rowspan="1">
 						</mat-grid-tile>
 
 						<!-- Description -->
-						<mat-grid-tile colspan="3" rowspan="4">
+						<mat-grid-tile colspan="5" rowspan="4">
 							<mat-form-field appearance="outline">
 								<mat-label>Description</mat-label>
 								<textarea matInput formControlName="description" placeholder="Description" cdkTextareaAutosize
                   cdkAutosizeMinRows="5"></textarea>
 							</mat-form-field>
+						</mat-grid-tile>
+
+				    <mat-grid-tile colspan="4" rowspan="2">
 						</mat-grid-tile>
 
 					</mat-grid-list>
